// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-datepicker #render should render component as expected (1) 1`] = `
<gux-datepicker value="1997-08-15">
  <mock:shadow-root>
    <div class="gux-datepicker">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label gux-sr-only" htmlfor="gux-datepicker-i">
          Date
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="08/15/1997">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="" mindate="" mode="single" numberofmonths="1" tabindex="-1" value="1997-08-15"></gux-calendar>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (2) 1`] = `
<gux-datepicker format="mm/dd/yy" value="1997-08-15">
  <mock:shadow-root>
    <div class="gux-datepicker">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label gux-sr-only" htmlfor="gux-datepicker-i">
          Date
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="08/15/97">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="" mindate="" mode="single" numberofmonths="1" tabindex="-1" value="1997-08-15"></gux-calendar>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (3) 1`] = `
<gux-datepicker format="mm.dd.yyyy" value="1997-08-15">
  <mock:shadow-root>
    <div class="gux-datepicker">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label gux-sr-only" htmlfor="gux-datepicker-i">
          Date
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="08.15.1997">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="" mindate="" mode="single" numberofmonths="1" tabindex="-1" value="1997-08-15"></gux-calendar>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (4) 1`] = `
<gux-datepicker disabled="" value="1997-08-15">
  <mock:shadow-root>
    <div class="gux-datepicker gux-disabled">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label gux-sr-only" htmlfor="gux-datepicker-i">
          Date
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input disabled="" id="gux-datepicker-i" type="text" value="08/15/1997">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" disabled="" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="" mindate="" mode="single" numberofmonths="1" tabindex="-1" value="1997-08-15"></gux-calendar>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (5) 1`] = `
<gux-datepicker mode="range" number-of-months="2" value="2019-11-25/2019-12-02">
  <mock:shadow-root>
    <div class="gux-datepicker">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          Start
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="11/25/2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="" mindate="" mode="range" numberofmonths="2" tabindex="-1" value="2019-11-25/2019-12-02"></gux-calendar>
        </div>
      </div>
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          End
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="12/02/2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (6) 1`] = `
<gux-datepicker max-date="2019-12-31" min-date="2019-11-10" mode="range" number-of-months="2" value="2019-11-25/2019-12-02">
  <mock:shadow-root>
    <div class="gux-datepicker">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          Start
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="11/25/2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="2019-12-31" mindate="2019-11-10" mode="range" numberofmonths="2" tabindex="-1" value="2019-11-25/2019-12-02"></gux-calendar>
        </div>
      </div>
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          End
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="12/02/2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (7) 1`] = `
<gux-datepicker format="mm.dd.yyyy" max-date="2019-12-31" min-date="2019-11-10" mode="range" number-of-months="2" value="2019-11-25/2019-12-02">
  <mock:shadow-root>
    <div class="gux-datepicker">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          Start
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="11.25.2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="2019-12-31" mindate="2019-11-10" mode="range" numberofmonths="2" tabindex="-1" value="2019-11-25/2019-12-02"></gux-calendar>
        </div>
      </div>
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          End
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="12.02.2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (8) 1`] = `
<gux-datepicker disabled="" mode="range" number-of-months="2" value="2019-11-25/2019-12-02">
  <mock:shadow-root>
    <div class="gux-datepicker gux-disabled">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          Start
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input disabled="" id="gux-datepicker-i" type="text" value="11/25/2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" disabled="" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="" mindate="" mode="range" numberofmonths="2" tabindex="-1" value="2019-11-25/2019-12-02"></gux-calendar>
        </div>
      </div>
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label" htmlfor="gux-datepicker-i">
          End
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input disabled="" id="gux-datepicker-i" type="text" value="12/02/2019">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" disabled="" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;

exports[`gux-datepicker #render should render component as expected (9) 1`] = `
<gux-datepicker start-day-of-week="6" value="1997-08-15">
  <mock:shadow-root>
    <div class="gux-datepicker">
      <div class="gux-datepicker-field">
        <label class="gux-datepicker-field-label gux-sr-only" htmlfor="gux-datepicker-i">
          Date
        </label>
        <div class="gux-datepicker-field-input">
          <div class="gux-datepicker-field-text-input">
            <input id="gux-datepicker-i" type="text" value="08/15/1997">
            <button aria-expanded="false" aria-label="Toggle calendar view" class="gux-calendar-toggle-button" type="button">
              <gux-icon decorative="" icon-name="fa/calendar-regular"></gux-icon>
            </button>
          </div>
          <gux-calendar maxdate="" mindate="" mode="single" numberofmonths="1" startdayofweek="6" tabindex="-1" value="1997-08-15"></gux-calendar>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-datepicker>
`;
